# shadow-vault

./: ARCHITECTURE.md  Anchor.toml  BUILD_LOG.md  BUSINESS_MODEL.md  COMPETITIVE_ANALYSIS.md  DEPLOYMENT.md  PRIVACY_AUDIT.md  README.md  ROADMAP.md  SUBMISSION.md  SUBMISSION_CHECKLIST.md  SUBMISSION_DRAFT.md  VIDEO_SCRIPT.md  demo.html  deploy-devnet.sh  index.html
agent/: package-lock.json  package.json
agent/src/: agent.ts  devnet-client.ts  encrypt-sim.ts  index.ts  policy.ts  types.ts  v02-demo.ts  zerion-integration.ts
assets/: index-C3QwLc_L.js  index-DJS0VQBS.js
docs/: index.html
media/video/: VOICEOVER_SCRIPT.md
program/: Anchor.toml  Cargo.toml
program/src/: lib.rs
scripts/: download-diagram.sh
sdk/: README.md  package-lock.json  package.json
sdk/src/: client.ts  index.ts  primitives.ts
sdk/src/__tests__/: live-test.ts
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.css  App.tsx
