[package]
name = "shadow-vault"
version = "0.2.0"
description = "Privacy-preserving vault for AI agents — commitment-based privacy"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shadow_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "~1.18"
hex = "0.4"

[dev-dependencies]
solana-sdk = "~1.18"
solana-client = "~1.18"
